# finage_mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: finage_mcp.py
src/finage_mcp/: __init__.py  api.py  endpoints.yaml  server.py
test/: finage_api.py
